@@ -95,6 +95,10 @@ allprojects {
         sourceCompatibility = 8
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
+        options.forkOptions.jvmArgs.addAll([
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+        ])
     }
 }
 
